--- a/index.html
+++ b/index.html
@@ -468,7 +468,8 @@ setInterval(() => {
 /* ------------------------------
    GÉNÉRATION RÉGULIÈRE
 --------------------------------*/
-setInterval(() => generateEvent(), 5000 + Math.random()*4000); // 5–9s
+setInterval(() => generateEvent(), 15000 + Math.random()*15000);
+
 
 </script>
 
