--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@ const SCENARIOS = [
     {label:"Arrêt cardio-respiratoire", type:"Médical", prio:"P0", desc:"Victime inconsciente, respiration absente.", victims:1, env:"Domicile"},
     {label:"Feu d'appartement", type:"Incendie", prio:"P0", desc:"Fumée noire, personnes coincées.", victims:2, env:"Immeuble"},
     {label:"Accident frontal", type:"Accident", prio:"P1", desc:"Deux voitures, un coincé.", victims:1, env:"Route"},
+    {label:"Chute d'un balcon", type:"Accident", prio:"P0", desc:"Chute signalée.", victims:1, env:"Immeuble"},
+    {label:"Début d'incendie de véhicule", type:"Incendie", prio:"P0", desc:"Flammes légères.", victims:0, env:"Parking"},
+    {label:"Personne bloquée dehors", type:"Divers", prio:"P1", desc:"Porte claquée.", victims:0, env:"Domicile"},
+    {label:"Signalement de bruit suspect", type:"Police", prio:"P1", desc:"Bruits inhabituels.", victims:0, env:"Immeuble"},
+    {label:"Personne bloquée dans ascenseur", type:"Technique", prio:"P0", desc:"Ascenseur immobilisé.", victims:1, env:"Immeuble"},
     {label:"Agression couteau", type:"Agression", prio:"P0", desc:"Victime poignardée, saigne abondamment.", victims:1, env:"Voie publique"},
     {label:"Vieil homme perdu", type:"Médical", prio:"P2", desc:"Confusion, marche instable.", victims:1, env:"Parc"},
     {label:"Odeur de gaz", type:"Risque", prio:"P1", desc:"Odeur forte dans immeuble.", victims:0, env:"Immeuble"},
@@ -159,6 +164,11 @@ const SCENARIOS = [
     {label:"Malaise métro", type:"Médical", prio:"P1", desc:"Victime au sol, respiration difficile.", victims:1, env:"Transport"},
     {label:"Voisin se prend pour un poulet", type:"Bizarre", prio:"P3", desc:"Crie depuis 20 minutes.", victims:0, env:"Immeuble"},
     {label:"Course poursuite scooter", type:"Police", prio:"P1", desc:"Scooter refuse d'obtempérer.", victims:0, env:"Route"},
+    {label:"Fuite importante d'eau", type:"Technique", prio:"P0", desc:"Inondation en cours.", victims:0, env:"Appartement"},
+    {label:"Signalement d'odeur forte", type:"Risque", prio:"P0", desc:"Odeur inhabituelle.", victims:0, env:"Cage d'escalier"},
+    {label:"Accident de trottinette", type:"Accident", prio:"P0", desc:"Personne au sol.", victims:1, env:"Rue"},
+    {label:"Chute d'un toit", type:"Accident", prio:"P0", desc:"Personne au sol.", victims:1, env:"Chantier"},
+    {label:"Déclenchement d'alarme incendie", type:"Incendie", prio:"P0", desc:"Alarme active.", victims:0, env:"Bâtiment"},
     {label:"Trafic suspect", type:"Douanes", prio:"P2", desc:"Chargements nocturnes suspects.", victims:0, env:"Zone industrielle"},
     {label:"Bagarre générale", type:"Agression", prio:"P1", desc:"Plusieurs blessés possibles.", victims:2, env:"Voie publique"},
     {label:"Chute d'un toit", type:"Accident", prio:"P0", desc:"Victime inconsciente.", victims:1, env:"Chantier"},
@@ -166,10 +176,58 @@ const SCENARIOS = [
     {label:"Ascenseur bloqué", type:"Risque", prio:"P2", desc:"Personne enfermée, panique.", victims:1, env:"Immeuble"},
     {label:"Complot imaginaire", type:"Bizarre", prio:"P3", desc:"Parle de caméras cachées.", victims:0, env:"Inconnu"},
     {label:"Violences conjugales", type:"Police", prio:"P1", desc:"Cris, bruits de coups.", victims:1, env:"Domicile"},
+    {label:"Accrochage de véhicules", type:"Accident", prio:"P1", desc:"Deux véhicules touchés.", victims:0, env:"Rue"},
+    {label:"Personne bloquée dehors", type:"Divers", prio:"P1", desc:"Porte claquée.", victims:0, env:"Domicile"},
+    {label:"Signalement de bruit suspect", type:"Police", prio:"P1", desc:"Bruits inhabituels.", victims:0, env:"Immeuble"},
     {label:"Intox alcool + chute", type:"Médical", prio:"P2", desc:"Plaie tête, alcoolisé.", victims:1, env:"Domicile"},
     {label:"Explosion entendue", type:"Risque", prio:"P1", desc:"Détonation forte, fumée.", victims:0, env:"Rue"},
     {label:"Cri animal étrange", type:"Bizarre", prio:"P3", desc:"Appelant parle d'un monstre.", victims:0, env:"Forêt"},
     {label:"Fuite chimique", type:"Risque", prio:"P0", desc:"Odeur piquante, irritation yeux.", victims:1, env:"Usine"}
+    {label:"Malaise sur la voie publique", type:"Médical", prio:"P0", desc:"Personne au sol.", victims:1, env:"Rue"},
+    {label:"Fumée dans un appartement", type:"Incendie", prio:"P0", desc:"Fumée visible.", victims:0, env:"Immeuble"},
+    {label:"Chute d'un balcon", type:"Accident", prio:"P0", desc:"Chute signalée.", victims:1, env:"Immeuble"},
+    {label:"Début d'incendie de véhicule", type:"Incendie", prio:"P0", desc:"Flammes légères.", victims:0, env:"Parking"},
+    {label:"Personne bloquée dans ascenseur", type:"Technique", prio:"P0", desc:"Ascenseur immobilisé.", victims:1, env:"Immeuble"},
+    {label:"Tapage important", type:"Police", prio:"P1", desc:"Nuisances sonores.", victims:0, env:"Immeuble"},
+    {label:"Dégradation de mobilier urbain", type:"Police", prio:"P1", desc:"Dégradations signalées.", victims:0, env:"Rue"},
+    {label:"Animal errant", type:"Divers", prio:"P1", desc:"Animal signalé.", victims:0, env:"Parc"},
+    {label:"Fuite légère d'eau", type:"Technique", prio:"P1", desc:"Eau au sol.", victims:0, env:"Appartement"},
+    {label:"Personne désorientée", type:"Police", prio:"P1", desc:"Comportement inhabituel.", victims:1, env:"Rue"},
+    {label:"Objets tombés d'un balcon", type:"Police", prio:"P1", desc:"Chute d'objets.", victims:0, env:"Immeuble"},
+    {label:"Petit feu de poubelle", type:"Incendie", prio:"P1", desc:"Fumée légère.", victims:0, env:"Rue"},
+    {label:"Accrochage de véhicules", type:"Accident", prio:"P1", desc:"Deux véhicules touchés.", victims:0, env:"Rue"},
+    {label:"Personne bloquée dehors", type:"Divers", prio:"P1", desc:"Porte claquée.", victims:0, env:"Domicile"},
+    {label:"Signalement de bruit suspect", type:"Police", prio:"P1", desc:"Bruits inhabituels.", victims:0, env:"Immeuble"},
+    {label:"Demande d'intervention mairie", type:"Mairie", prio:"P2", desc:"Problème d'éclairage.", victims:0, env:"Rue"},
+    {label:"Nid-de-poule important", type:"Mairie", prio:"P2", desc:"Chaussée abîmée.", victims:0, env:"Route"},
+    {label:"Arbre gênant la circulation", type:"Mairie", prio:"P2", desc:"Branche tombée.", victims:0, env:"Rue"},
+    {label:"Signalement de scooter gênant", type:"Police", prio:"P2", desc:"Stationnement gênant.", victims:0, env:"Trottoir"},
+    {label:"Demande de vérification compteur", type:"Technique", prio:"P2", desc:"Suspicion anomalie.", victims:0, env:"Appartement"},
+    {label:"Bruit de ventilation", type:"Technique", prio:"P2", desc:"Bruit persistant.", victims:0, env:"Immeuble"},
+    {label:"Petit dégât des eaux", type:"Technique", prio:"P2", desc:"Humidité murale.", victims:0, env:"Appartement"},
+    {label:"Demande d'information mairie", type:"Mairie", prio:"P2", desc:"Renseignement demandé.", victims:0, env:"Bureau"},
+    {label:"Signalement de véhicule abandonné", type:"Police", prio:"P2", desc:"Véhicule immobile.", victims:0, env:"Rue"},
+    {label:"Problème de portail automatique", type:"Technique", prio:"P2", desc:"Portail bloqué.", victims:0, env:"Résidence"},
+    {label:"Signalement de nuisance légère", type:"Police", prio:"P2", desc:"Bruit modéré.", victims:0, env:"Immeuble"},
+    {label:"Demande de passage SOS Médecin", type:"Médical", prio:"P2", desc:"Consultation souhaitée.", victims:1, env:"Domicile"},
+    {label:"Demande de renseignement", type:"Divers", prio:"P3", desc:"Information générale.", victims:0, env:"Téléphone"},
+    {label:"Signalement de lumière restée allumée", type:"Mairie", prio:"P3", desc:"Éclairage inutile.", victims:0, env:"Rue"},
+    {label:"Petit bruit dans un local", type:"Technique", prio:"P3", desc:"Bruit léger.", victims:0, env:"Local"},
+    {label:"Demande de conseil", type:"Divers", prio:"P3", desc:"Besoin d'avis.", victims:0, env:"Téléphone"},
+    {label:"Vérification de badge d'accès", type:"Sécurité", prio:"P3", desc:"Badge non reconnu.", victims:0, env:"Entrée"},
+    {label:"Signalement de vélo mal attaché", type:"Police", prio:"P3", desc:"Vélo instable.", victims:0, env:"Rue"},
+    {label:"Demande de passage mairie", type:"Mairie", prio:"P3", desc:"Simple vérification.", victims:0, env:"Quartier"},
+    {label:"Demande de contact gendarmerie", type:"Gendarmerie", prio:"P3", desc:"Renseignement.", victims:0, env:"Téléphone"},
+    {label:"Demande de contact police", type:"Police", prio:"P3", desc:"Information simple.", victims:0, env:"Téléphone"},
+    {label:"Demande de contact pompiers", type:"Pompiers", prio:"P3", desc:"Renseignement.", victims:0, env:"Téléphone"},
+    {label:"Signalement de panneau penché", type:"Mairie", prio:"P3", desc:"Panneau instable.", victims:0, env:"Rue"},
+    {label:"Demande de passage technique", type:"Technique", prio:"P3", desc:"Contrôle léger.", victims:0, env:"Immeuble"},
+    {label:"Signalement de bruit de ventilation", type:"Technique", prio:"P3", desc:"Bruit faible.", victims:0, env:"Cave"},
+
+
+
+
+
 ];
 
 /* ------------------------------
