--- a/index.html
+++ b/index.html
@@ -222,12 +222,7 @@ const SCENARIOS = [
     {label:"Demande de contact pompiers", type:"Pompiers", prio:"P3", desc:"Renseignement.", victims:0, env:"Téléphone"},
     {label:"Signalement de panneau penché", type:"Mairie", prio:"P3", desc:"Panneau instable.", victims:0, env:"Rue"},
     {label:"Demande de passage technique", type:"Technique", prio:"P3", desc:"Contrôle léger.", victims:0, env:"Immeuble"},
-    {label:"Signalement de bruit de ventilation", type:"Technique", prio:"P3", desc:"Bruit faible.", victims:0, env:"Cave"},
-
-
-
-
-
+    {label:"Signalement de bruit de ventilation", type:"Technique", prio:"P3", desc:"Bruit faible.", victims:0, env:"Cave"}
 ];
 
 /* ------------------------------
