--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ const SCENARIOS = [
     {label:"Intox alcool + chute", type:"Médical", prio:"P2", desc:"Plaie tête, alcoolisé.", victims:1, env:"Domicile"},
     {label:"Explosion entendue", type:"Risque", prio:"P1", desc:"Détonation forte, fumée.", victims:0, env:"Rue"},
     {label:"Cri animal étrange", type:"Bizarre", prio:"P3", desc:"Appelant parle d'un monstre.", victims:0, env:"Forêt"},
-    {label:"Fuite chimique", type:"Risque", prio:"P0", desc:"Odeur piquante, irritation yeux.", victims:1, env:"Usine"}
+    {label:"Fuite chimique", type:"Risque", prio:"P0", desc:"Odeur piquante, irritation yeux.", victims:1, env:"Usine"},
     {label:"Malaise sur la voie publique", type:"Médical", prio:"P0", desc:"Personne au sol.", victims:1, env:"Rue"},
     {label:"Fumée dans un appartement", type:"Incendie", prio:"P0", desc:"Fumée visible.", victims:0, env:"Immeuble"},
     {label:"Chute d'un balcon", type:"Accident", prio:"P0", desc:"Chute signalée.", victims:1, env:"Immeuble"},
